# OS_Learn

./: .gitignore  .gitmodules  Assembly_Note.md  CMakeLists.txt  README.md
jyy-os-2023/: Note.md  download.md
jyy-os-2023/abstract-machine/: Makefile  Makefile.html
jyy-os-2023/abstract-machine/note/: index.md
jyy-os-2023/code-at-book/: Makefile  Note.md
jyy-os-2023/code-at-book/10-hello/: Makefile  hello.c  print.py  thread.h
jyy-os-2023/code-at-book/11-stack-probe/: Makefile  stack-probe.c  thread.h
jyy-os-2023/code-at-book/12-alipay/: Makefile
jyy-os-2023/code-at-book/13-sum/: Makefile  O1.txt  O2.txt  sum  sum-o1  sum-o2  sum.c
jyy-os-2023/code-at-book/15-store-load/: Makefile  store-load.py
jyy-os-2023/code-at-book/16-peterson/: Makefile  peterson.py  spin.py
jyy-os-2023/code-at-book/17-sum-atomic/: Makefile  sum-atomic.c
jyy-os-2023/code-at-book/19-cmpxchg/: cmpxchg.c
jyy-os-2023/code-at-book/2-minimal/: Makefile  exit.s  hello.dump.asm  minimal.S
jyy-os-2023/code-at-book/25-mem-error/: meme-error.c
jyy-os-2023/code-at-book/26-pc-mutex/: pc-mutex.c  thread-sync.h
jyy-os-2023/code-at-book/27-pc-cv/: pc-cv-while.c  pc-cv.c
jyy-os-2023/code-at-book/28-fish/: fish.c
jyy-os-2023/code-at-book/29-pc-sem/: pc-sem.c  pc-sem.py
jyy-os-2023/code-at-book/3-hanoi/: Makefile  hanoi-nr.c
jyy-os-2023/code-at-book/30-join-sem/: join-sem.c
jyy-os-2023/code-at-book/31-fish-sem/: fish-sem.c
jyy-os-2023/code-at-book/32-pc-sem/: philosopher.c
jyy-os-2023/code-at-book/33-mandelbrot/: mandelbrot.c
jyy-os-2023/code-at-book/34-goroutine/: Makefile  fib.go  pc.go
jyy-os-2023/code-at-book/35-mandelbrot-cuda/: Makefile  mandelbrot.cu
jyy-os-2023/code-at-book/36-tocttou/: deadlock-aa.py  tocttou.py
jyy-os-2023/code-at-book/37-lock-ordering/: lock-ordering.c
jyy-os-2023/code-at-book/38-spinlock/: spinlock-xv6.c
jyy-os-2023/code-at-book/39-lockdep/: lockdep.c
jyy-os-2023/code-at-book/4-opt/: dum.s
jyy-os-2023/code-at-book/40-uaf/: uaf.c
jyy-os-2023/code-at-book/41-alipay/: Makefile  alipay.c
jyy-os-2023/code-at-book/42-rv32ima/: Makefile  rv32ima.c  rv32ima.h
jyy-os-2023/code-at-book/43-spinlock/: Makefile  spinlock.c
jyy-os-2023/code-at-book/44-thread-os/: Makefile  task.h  thread-os.c
jyy-os-2023/exercise/: Dockerfile  Makefile  Note.md
jyy-os-2024/labs/: Dockerfile  Makefile  Note.md  common.mk
jyy-os-2024/note/: note.md  resource.md
jyy-os-2024/os-demos/: common.mk  index.html
libs/: git_pull.sh  git_push.sh
libs/elf-parser/: README.txt
libs/yemu/: README.md  idex.c  yemu.c
pa2023/: Sparial_Rule.md  note.md
pa2023/course/: reg.c
pa2023/doc/: clion.txt  dummy-riscv32-nemu.txt  note.md
pa2023/doc/elf/: itrace.c
pa2023/lab/: Makefile
(+239 files in other folders)
